--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+  <% if current_user %>
+    Logged in as: <strong><%= current_user.user_name %></strong>
+    <%= link_to 'Sign Out', signout_path %>
+    <% else %>
+    <%= link_to "Sign Up", signup_path %>
+    <%= link_to 'Sign In', signin_path %>
+    <% end %>
+
 </head>
 <body>
 
